// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Options not for current Type should error if type is not number and a number-validate is supplied 1`] = `
Array [
  Array [
    "Type of \\"TestNNTEValidate.test\\" is not Number, but includes the following Number-Validate options [W001]:
  [max]",
  ],
]
`;

exports[`Options not for current Type should warn if type is not string and a string-transform is supplied 1`] = `
Array [
  Array [
    "Type of \\"TestNSTETransform.test\\" is not String, but includes the following String-Transform options [W001]:
  [lowercase]",
  ],
]
`;

exports[`Options not for current Type should warn if type is not string and a string-validate is supplied 1`] = `
Array [
  Array [
    "Type of \\"TestNSTEValidate.test\\" is not String, but includes the following String-Validate options [W001]:
  [maxlength]",
  ],
]
`;

exports[`should throw a error if property is "Mixed" and Severity.ERROR is used 1`] = `"Setting \\"Mixed\\" is not allowed! (TestMixedError, test) [E017]"`;

exports[`should warn if "existingConnection" is defined differently on base and discriminator 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Property \\"existingConnection\\" was defined on \\"DisDecoratorEC\\", but is different from discriminator base \\"DisBaseDecoratorEC\\", which is not supported! [W002]",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`should warn if "existingConnection" is defined differently on base and discriminator 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Property \\"existingConnection\\" was defined on \\"DisParameterEC\\", but is different from discriminator base \\"DisBaseParameterEC\\", which is not supported! [W002]",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`should warn if "existingMongoose" is defined differently on base and discriminator 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Property \\"existingMongoose\\" was defined on \\"DisDecoratorEM\\", but is different from discriminator base \\"DisBaseDecoratorEM\\", which is not supported! [W002]",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`should warn if "existingMongoose" is defined differently on base and discriminator 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Property \\"existingMongoose\\" was defined on \\"DisParameterEM\\", but is different from discriminator base \\"DisBaseParameterEM\\", which is not supported! [W002]",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`should warn if "justOne" is defined, but no Virtual Populate Options 1`] = `
Array [
  Array [
    "Option \\"justOne\\" is defined in \\"TestJustOneWarning.test\\" but no Virtual-Populate-Options!
Look here for more: https://typegoose.github.io/typegoose/docs/api/virtuals#virtual-populate",
  ],
]
`;

exports[`should warn if property is "Mixed" 1`] = `
Array [
  Array [
    "Setting \\"Mixed\\" for property \\"%s.%s\\"
Look here for how to disable this message: https://typegoose.github.io/typegoose/docs/api/decorators/model-options/#allowmixed",
    "TestMixedWarning",
    "test",
  ],
]
`;

exports[`should warn if property is "Mixed" and a invalid Severity is used 1`] = `
Array [
  Array [
    "Setting \\"Mixed\\" for property \\"%s.%s\\"
Look here for how to disable this message: https://typegoose.github.io/typegoose/docs/api/decorators/model-options/#allowmixed",
    "TestMixedWarning",
    "test",
  ],
]
`;
